--- a/templates/base.html
+++ b/templates/base.html
@@ -2,54 +2,92 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
-    
-    {% block meta %}
-    <!-- Required meta tags -->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
 
-    {% block extra_meta %}
-    {% endblock %}
+<head>
 
-    {% block corecss %}
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-     {% endblock %}
+	{% block meta %}
+	<!-- Required meta tags -->
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	{% endblock %}
 
-     {% block extra_corecss %}
-     {% endblock %}
+	{% block extra_meta %}
+	{% endblock %}
 
-     {% block corejs %}
-     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    {% endblock %}
+	{% block corecss %}
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	{% endblock %}
 
-    {% block extra_corejs %}
-    {% endblock %}
+	{% block extra_css %}
+	{% endblock %}
 
-    <title>Boutique Ado</title>
-  </head>
-  <body>
+	{% block corejs %}
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+	</script>
+	{% endblock %}
 
-    <header class="container-fluid fixed-top"></header>
+	{% block extra_js %}
+	{% endblock %}
 
-    {% if messages %}
-    <div class="message-container"></div>
-    {% endif %}
+	<title>Boutique Ado {% block extra_title %}{% endblock %}</title>
+</head>
 
-    {% block page_header %}
-    {% endblock %}
+<body>
 
-    {% block content %}
-    {% endblock %}
+	<header class="container-fluid fixed-top">
+		<div class="row">
+			<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+				<a href="{% url 'home' %}" class="nav-link main-logo-link">
+					<h2 class="logo-font text-black my-0"><strong>Boutique Ado</strong></h2>
+				</a>
+			</div>
+			<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+				<form method="GET" action="">
+					<div class="input-group w-100">
+						<input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search Our Website">
+						<div class="input-group-append">
+							<button class="form-control btn btn-black border border-black rounded-0" type="submit">
+								<span class="icon">
+									<i class="fas fa-search"></i>
+								</span>
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+            <li class="list-inline-item dropdown"></li>
+            <li class="list-inline-item"></li>
+            </ul>
+            </div>
+		</div>
+	</header>
 
-    {% block postloadjs %}
-    {% endblock %}
+	{% if messages %}
+	<div class="message-container"></div>
+	{% endif %}
 
-  </body>
+	{% block page_header %}
+	{% endblock %}
+
+	{% block content %}
+	{% endblock %}
+
+	{% block postloadjs %}
+	{% endblock %}
+
+</body>
+
 </html>
