--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,16 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	{% endblock %}
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {% endblock %}
 
 	{% block extra_css %}
 	{% endblock %}
 
 	{% block corejs %}
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://kit.fontawesome.com/c2cf02c5ba.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	</script>
@@ -46,7 +49,7 @@
 <body>
 
 	<header class="container-fluid fixed-top">
-		<div class="row">
+		<div id="topnav "class="row bg-white pt-lg-2 d-none d-lg-flex">
 			<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
 				<a href="{% url 'home' %}" class="nav-link main-logo-link">
 					<h2 class="logo-font text-black my-0"><strong>Boutique Ado</strong></h2>
